mdapi/Custom/objects/Renewal__c.object
<CustomObject>
    <fields>
        <fullName>Variance_Actual_to_Proposed_New__c</fullName>
        <formula>New_Rent__c - Actual_Lease_Amount_from_Yardi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance ($) - Actual to Proposed New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_Current_Rent_dollar_to_New_Rent__c</fullName>
        <formula>New_Rent__c -  (  Lease__r.Lease_Rent__c  +   Lease__r.Housing_Rent__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance ($) - Current to Proposed New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_Current_dollar_to_New_Yardi__c</fullName>
        <formula>( Renewed_Lease_Rent_Yardi__c  +  Renewed_Lease_Housing_Rent_Yardi__c  )  -  (  Lease__r.Lease_Rent__c  +   Lease__r.Housing_Rent__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance ($) - Current to New (Yardi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_Current_to_CMA_Formula_Percent__c</fullName>
        <formula>CMA_Rent__c /( Lease__r.Lease_Rent__c +   Lease__r.Housing_Rent__c ) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance (%) - Current to CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_Current_to_CMA_Formula__c</fullName>
        <formula>CMA_Rent__c - ( Lease__r.Lease_Rent__c + Lease__r.Housing_Rent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance ($) - Current to CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_Current_to_New_Rent__c</fullName>
        <formula>New_Rent__c  /  (   Lease__r.Lease_Rent__c +   Lease__r.Housing_Rent__c ) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance (%) - Current to Proposed New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_Current_to_New_Yardi__c</fullName>
        <formula>(  Renewed_Lease_Rent_Yardi__c  +  Renewed_Lease_Housing_Rent_Yardi__c ) / (   Lease__r.Lease_Rent__c   +   Lease__r.Housing_Rent__c   )   - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance (%) - Current to New (Yardi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_New_Rent_dollar_to_Market_Rent__c</fullName>
        <formula>New_Rent__c - CMA_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance ($) - Proposed New to CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_New_Rent_dollar_to_UW_Rent__c</fullName>
        <formula>New_Rent__c -  UW_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance ($) - Proposed New to UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_New_Rent_to_Market_Rent__c</fullName>
        <formula>(New_Rent__c/CMA_Rent__c)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance (%) -  Proposed New to CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_New_Rent_to_UW_Rent__c</fullName>
        <formula>(New_Rent__c/UW_Rent__c)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance (%) - Proposed New to UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_New_Yardi_to_Market__c</fullName>
        <formula>((Renewed_Lease_Rent_Yardi__c  +  Renewed_Lease_Housing_Rent_Yardi__c  )/CMA_Rent__c)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance (%) - New (Yardi) to CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_New_Yardi_to_UW__c</fullName>
        <formula>((Renewed_Lease_Rent_Yardi__c  +  Renewed_Lease_Housing_Rent_Yardi__c  )/UW_Rent__c) -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance (%) - New (Yardi) to UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variance_New_dollar_Yardi_to_Market__c</fullName>
        <formula>( Renewed_Lease_Rent_Yardi__c  +  Renewed_Lease_Housing_Rent_Yardi__c  )  - CMA_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance ($) - New (Yardi) to CMA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_New_dollar_Yardi_to_UW__c</fullName>
        <formula>( Renewed_Lease_Rent_Yardi__c  +  Renewed_Lease_Housing_Rent_Yardi__c  )  - UW_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance ($) - New (Yardi) to UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_Proposed_Rent_to_Rent_Year2__c</fullName>
        <formula>(Proposed_New_Rent_Year_2__c/New_Rent__c) -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance(%)-Proposed Rent to Rent Year2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Violations_Comments__c</fullName>
        <label>Violations Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Yardi_Code_Historical__c</fullName>
        <inlineHelpText>This was the Yardi code associated with this asset prior to securitization.</inlineHelpText>
        <label>Yardi Code - Historical</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Code__c</fullName>
        <formula>Portfolio__r.Yardi_Property_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Code_search_text__c</fullName>
        <label>Yardi Code_search text</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>days_after_move_out__c</fullName>
        <formula>if(Today()-Move_Out_Date_from_Yardi__c&lt;0,0,Today()-Move_Out_Date_from_Yardi__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days after move out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Renewal</label>
    <listViews>
        <fullName>ATL_CMA_for_60_day_renewal_ltrs</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>Lease_End_Date__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>NAME</columns>
        <columns>Property_Address__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>Housing_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>CMA_Rent_Comments__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Initial_Proposed_New_Rent__c</columns>
        <columns>Rent_Strategy_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH,NEXT_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>CMA_Rent__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lease_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>notEqual</operation>
            <value>Lease Terminated (Eviction/Skip/Etc.),Eviction in Process</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <filters>
            <field>PM__c</field>
            <operation>equals</operation>
            <value>Tiffany Cox</value>
        </filters>
        <label>ATL- CMAs needed for 60 day Renewal Ltrs</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Team_Member_Atlanta</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATL_Missing_Renewal_Correspondence</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>Lease_End_Date__c</columns>
        <columns>NAME</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Resident_Name__c</columns>
        <columns>Phone_Primary__c</columns>
        <columns>Resident_Phone_Secondary__c</columns>
        <columns>Total_Rent__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>Renewal_Status_Comments__c</columns>
        <columns>First_Contact_Notice_Sent__c</columns>
        <columns>Third_Contact_Notice_Sent__c</columns>
        <columns>Fourth_Contact_Notice_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:75</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Open,Not Renewed - Notice,Month-to-Month,Eviction in Process</value>
        </filters>
        <filters>
            <field>TIP_Formula__c</field>
            <operation>equals</operation>
            <value>IH Lease</value>
        </filters>
        <filters>
            <field>Bad_Data__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <filters>
            <field>Yardi_Code__c</field>
            <operation>equals</operation>
            <value>4gaa8570,4gaa8427</value>
        </filters>
        <label>ATL- Renewal Correspondence-SS</label>
        <sharedTo>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATL_Open_Renewals_No_Proposed_Rent</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 and 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Resident_Name__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Total_Rent__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Days_to_Lease_End__c</columns>
        <columns>Move_Out_Date_from_Yardi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>New_Rent__c</field>
            <operation>equals</operation>
            <value>,0</value>
        </filters>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH,NEXT_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>Lease_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Open,Lease Renewed,Month-to-Month,Eviction in Process,&gt;120 Days Out</value>
        </filters>
        <filters>
            <field>PM__c</field>
            <operation>equals</operation>
            <value>Allison Timms</value>
        </filters>
        <label>ATL- Open Renewals No Proposed Rent</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Team_Member_Atlanta</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATL_Renewal_Correspondence8</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Lease_End_Date__c</columns>
        <columns>NAME</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Resident_Name__c</columns>
        <columns>Phone_Primary__c</columns>
        <columns>Resident_Phone_Secondary__c</columns>
        <columns>Total_Rent__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>Renewal_Status_Comments__c</columns>
        <columns>First_Contact_Notice_Sent__c</columns>
        <columns>Third_Contact_Notice_Sent__c</columns>
        <columns>Fourth_Contact_Notice_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:75</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>TIP_Formula__c</field>
            <operation>equals</operation>
            <value>IH Lease</value>
        </filters>
        <filters>
            <field>Bad_Data__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <label>ATL- Renewal Correspondence</label>
        <sharedTo>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATL_Renewal_Correspondence_AJ</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 and 7 and 8 and 9</booleanFilter>
        <columns>Lease_End_Date__c</columns>
        <columns>NAME</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Resident_Name__c</columns>
        <columns>Phone_Primary__c</columns>
        <columns>Resident_Phone_Secondary__c</columns>
        <columns>Comments_for_Coordinator__c</columns>
        <columns>Alert_Coordinator__c</columns>
        <columns>Total_Rent__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>Renewal_Status_Comments__c</columns>
        <columns>First_Contact_Notice_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>9/30/2017</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>TIP_Formula__c</field>
            <operation>equals</operation>
            <value>IH Lease</value>
        </filters>
        <filters>
            <field>Bad_Data__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <filters>
            <field>PM__c</field>
            <operation>contains</operation>
            <value>Ashlee Johnson</value>
        </filters>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>greaterThan</operation>
            <value>8/31/2017</value>
        </filters>
        <filters>
            <field>Alert_Coordinator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OBJECT_ID</field>
            <operation>equals</operation>
        </filters>
        <label>ATL- Renewal Correspondence- AJ</label>
        <sharedTo>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATL_Renewal_Pricing_Approval_Needed</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 and 5</booleanFilter>
        <columns>Yardi_Code__c</columns>
        <columns>NAME</columns>
        <columns>Rent_Strategy_Comments__c</columns>
        <columns>PM__c</columns>
        <columns>Current_Lease_Term_Bucket__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Days_to_Lease_End__c</columns>
        <columns>Resident_Renewal_Requirements__c</columns>
        <columns>Total_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>CMA_Rent_Comments__c</columns>
        <columns>Variance_Current_Rent_dollar_to_New_Rent__c</columns>
        <columns>Variance_Current_to_New_Rent__c</columns>
        <columns>Variance_New_Rent_to_Market_Rent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>greaterThan</operation>
            <value>9/30/2017</value>
        </filters>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>lessThan</operation>
            <value>11/1/2017</value>
        </filters>
        <filters>
            <field>PM__c</field>
            <operation>contains</operation>
            <value>Ashlee Johnson</value>
        </filters>
        <label>ATL** Renewal Pricing Approval Needed</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Lease__c</columns>
        <columns>Days_to_Lease_End__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Third_Contact_Notice_Sent__c</columns>
        <columns>Second_Contact_Notice_Sent__c</columns>
        <columns>First_Contact_Notice_Sent__c</columns>
        <columns>Date_Time_Coordinator_Alert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bad_Data__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Renewal Records</label>
    </listViews>
    <listViews>
        <fullName>Heidi_1_OPEN_THIS_MONTH_EXP</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Resident_Name__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>PM__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Variance_Current_to_New_Rent__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>Renewal_Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>PM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Renewal_Close_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>All SEA - 1 -  OPEN THIS MONTH EXP</label>
        <sharedTo>
            <role>Executive_Seattle</role>
            <role>Team_Member_Seattle</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Heidi_2_OPEN_NEXT_MONTH_EXP</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Resident_Name__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>PM__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Variance_Current_to_New_Rent__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>Renewal_Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>PM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Renewal_Close_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>All SEA - 2 - OPEN NEXT MONTH EXP</label>
        <sharedTo>
            <role>Executive_Seattle</role>
            <role>Team_Member_Seattle</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jax_Renewal_Pricing_Approval_Needed</fullName>
        <columns>Yardi_Code__c</columns>
        <columns>NAME</columns>
        <columns>PM__c</columns>
        <columns>Current_Lease_Term_Bucket__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Days_to_Lease_End__c</columns>
        <columns>Resident_Renewal_Requirements__c</columns>
        <columns>Total_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>Rent_Strategy_Comments__c</columns>
        <columns>CMA_Rent_Comments__c</columns>
        <columns>Variance_Current_Rent_dollar_to_New_Rent__c</columns>
        <columns>Variance_Current_to_New_Rent__c</columns>
        <columns>Variance_New_Rent_to_Market_Rent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Jacksonville</value>
        </filters>
        <filters>
            <field>Days_to_Lease_End__c</field>
            <operation>greaterThan</operation>
            <value>60</value>
        </filters>
        <filters>
            <field>Renewal_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Days_to_Lease_End__c</field>
            <operation>lessThan</operation>
            <value>90</value>
        </filters>
        <label>**Jax Renewal Pricing Approval Needed</label>
        <sharedTo>
            <group>Jacksonville_Portfolio_Edit_Access</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NK_1_OPEN_THIS_MONTH_EXP</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Resident_Name__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Variance_Current_to_New_Rent__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>Renewal_Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>PM__c</field>
            <operation>equals</operation>
            <value>Jaqueline Rumens</value>
        </filters>
        <filters>
            <field>Renewal_Close_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Bad_Data__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>South Region - 1 - OPEN THIS MONTH EXP</label>
        <sharedTo>
            <role>Executive_Seattle</role>
            <role>Team_Member_Seattle</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NK_2_OPEN_NEXT_MONTH_EXP1</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Resident_Name__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Variance_Current_to_New_Rent__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>Renewal_Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>PM__c</field>
            <operation>equals</operation>
            <value>Jaqueline Rumens</value>
        </filters>
        <filters>
            <field>Renewal_Close_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Bad_Data__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>South Region - 2  - OPEN NEXT MONTH EXP</label>
        <sharedTo>
            <role>Executive_Seattle</role>
            <role>Team_Member_Seattle</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Next_120_Days_JAX</fullName>
        <columns>NAME</columns>
        <columns>Resident_Name__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Notes__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>First_Contact_Notice_Due_Date__c</columns>
        <columns>First_Contact_Notice_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:120</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Jacksonville</value>
        </filters>
        <label>Next 120 Days - JAX</label>
        <sharedTo>
            <role>Executive_Jacksonville</role>
            <role>Team_Member_Jacksonville</role>
            <role>X3rd_Party_Jacksonville</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Next_120_Days_JAX1</fullName>
        <columns>NAME</columns>
        <columns>Resident_Name__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Notes__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>First_Contact_Notice_Due_Date__c</columns>
        <columns>First_Contact_Notice_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:150</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <filters>
            <field>Yardi_Code__c</field>
            <operation>equals</operation>
            <value>Yardi Code 2GAA2247 2GAA3964 2GAA4123 2GAA4190 2GAA4440 2GAA4585 2GAA4609 2GAA47</value>
        </filters>
        <label>Next 120 Days - JAX</label>
        <sharedTo>
            <role>Executive_Jacksonville</role>
            <role>Team_Member_Jacksonville</role>
            <role>X3rd_Party_Jacksonville</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Next_120_Days_JAX2</fullName>
        <columns>NAME</columns>
        <columns>Resident_Name__c</columns>
        <columns>Yardi_Code__c</columns>
        <columns>Renewal_Status__c</columns>
        <columns>Lease_Rent__c</columns>
        <columns>CMA_Rent__c</columns>
        <columns>New_Rent__c</columns>
        <columns>Lease__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <columns>Notes__c</columns>
        <columns>Resident_Intent__c</columns>
        <columns>First_Contact_Notice_Due_Date__c</columns>
        <columns>First_Contact_Notice_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lease_End_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:120</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Jacksonville</value>
        </filters>
        <label>Next 120 Days - JAX</label>
        <sharedTo>
            <role>Executive_Jacksonville</role>
            <role>Team_Member_Jacksonville</role>
            <role>X3rd_Party_Jacksonville</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RNWL-{00000}</displayFormat>
        <label>Renewal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fields_Required_to_Send_Alert</fullName>
        <active>true</active>
        <description>Please populate Renewal Coordinator, Proposed New Rent, New Lease Start Date, New Lease End Date, and Deposit before attempting to alert the Coordinator.</description>
        <errorConditionFormula>Alert_Coordinator__c = TRUE &amp;&amp; 
ISBLANK( Renewal_Coordinator__c )&amp;&amp;
ISBLANK(  New_Rent__c )&amp;&amp;
ISBLANK(  New_Lease_Start_Date__c  )&amp;&amp;
ISBLANK(  New_Lease_End_Date__c  )&amp;&amp;
ISBLANK( Deposit__c  )</errorConditionFormula>
        <errorMessage>Please populate Renewal Coordinator, Proposed New Rent, New Lease Start Date, New Lease End Date, and Deposit before attempting to alert the Coordinator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lease_Renewed_Requirements</fullName>
        <active>true</active>
        <description>In order to change Renewal Status to Lease Renewed: 
New Rent and Renewal Close Date must be populated.
Move Out Reason (Yardi), MTM Extension Reason, Scheduled Move Out Date, and Actual Move Out Date must be blank.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Renewal_Status__c , &quot;Lease Renewed&quot;), 
Lease_Expires_After_August_2013__c = TRUE, 
OR( 
ISBLANK(New_Rent__c), 
ISBLANK(Renewal_Close_Date__c),  
NOT(ISBLANK(TEXT(MTM_Extension_Reason__c))), 
NOT(ISBLANK(Scheduled_Move_Out_Date__c)), 
NOT(ISBLANK(Actual_Move_Out_Date__c))))&amp;&amp; 
$Profile.Name != &apos;System Administrator&apos; &amp;&amp; 
$Profile.Name != &apos;SFDC Business Partner&apos;</errorConditionFormula>
        <errorMessage>In order to change Renewal Status to Lease Renewed, (1) Proposed New Rent and Renewal Close Date must be populated, and (2) MTM Extension Reason, Scheduled Move-Out Date, and Actual Move-Out Date  must be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lease_Terminated_Requires_Reason</fullName>
        <active>true</active>
        <description>Lease Terminated (Eviction, Skip, Etc.) requires Early Termination Reason.</description>
        <errorConditionFormula>Lease_End_Date__c &gt;= DATE(2013,10,31) &amp;&amp; 
ISPICKVAL( Renewal_Status__c ,&quot;Lease Terminated (Eviction/Skip/Etc.)&quot;)&amp;&amp; 
ISBLANK(TEXT(Pre_Term_Lease_Expiration_Reason__c ))&amp;&amp; 
$Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>Pre_Term_Lease_Expiration_Reason__c</errorDisplayField>
        <errorMessage>Lease Terminated (Eviction, Skip, Etc.) requires Early Termination Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MTM_Extension_Reason_Required</fullName>
        <active>true</active>
        <description>MTM Extension Reason required when Renewal Status equals Month-to-Month.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Renewal_Status__c , &quot;Month-to-Month&quot;),
ISBLANK(TEXT( MTM_Extension_Reason__c )
))</errorConditionFormula>
        <errorMessage>MTM Extension Reason required when Renewal Status equals Month-to-Month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Market_to_UW_Delta_Description_Required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(CMA_Rent__c)) &amp;&amp; 
NOT(ISBLANK(UW_Rent__c)) &amp;&amp; 
CMA_Rent__c  &lt;&gt;  UW_Rent__c &amp;&amp; 
ISBLANK(CMA_Rent_Comments__c)</errorConditionFormula>
        <errorMessage>Market Rent does not equal UW Rent.  Please enter CMA Rent Comments.</errorMessage>
    </validationRules>
</CustomObject>